--- a/web.config
+++ b/web.config
@@ -3,6 +3,19 @@
     <system.webServer>
         <staticContent>
             <mimeMap fileExtension=".webp" mimeType="image/webp" />
+            <mimeMap fileExtension=".avif" mimeType="image/avif" />
+            <mimeMap fileExtension=".json" mimeType="application/json" />
+            <mimeMap fileExtension=".ttf"  mimeType="font/ttf" />
+            <mimeMap fileExtension=".otf"  mimeType="font/otf" />
         </staticContent>
+        <security>
+            <requestFiltering allowDoubleEscaping="true" />
+        </security>
+        <httpProtocol>
+            <customHeaders>
+                <add name="X-Frame-Options" value="SAMEORIGIN" />
+                <add name="X-Content-Type-Options" value="nosniff" />
+            </customHeaders>
+        </httpProtocol>
     </system.webServer>
 </configuration>
